Add test version of POI navigation

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -14,4 +14,10 @@
         android:textAlignment="center"
         android:background="#FFF000"/>
 
+    <Button
+        android:id="@+id/btn_route"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="route"/>
+
 </FrameLayout>
