Add remind password activity and fix email and password error

--- a/app/src/main/res/layout/activity_remind_password.xml
+++ b/app/src/main/res/layout/activity_remind_password.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+    tools:context=".RemindPasswordActivity">
+
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email"/>
 
     <Button
-        android:id="@+id/btn_logout"
+        android:id="@+id/btn_remind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="logout"/>
-
-    <TextView
-        android:id="@+id/tv_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24dp"/>
+        android:text="remind"/>
 
 </LinearLayout>
