--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -7,6 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tv_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
@@ -18,6 +19,7 @@
         android:id="@+id/btn_route"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="route"/>
+        android:layout_marginTop="50dp"
+        android:text="route" />
 
 </FrameLayout>
