Add change email and password options

--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -9,15 +9,24 @@
     android:orientation="vertical">
 
     <EditText
+        android:id="@+id/et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:text="New email"/>
+
+    <EditText
         android:id="@+id/old_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:text="Old password"/>
 
     <EditText
         android:id="@+id/new_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:text="New password"/>
 
     <Button
