--- a/app/src/main/res/layout/activity_email_change.xml
+++ b/app/src/main/res/layout/activity_email_change.xml
@@ -12,6 +12,21 @@
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:text="New email"/>
+
+    <EditText
+        android:id="@+id/old_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:text="Old password"/>
+
+    <EditText
+        android:id="@+id/et_newemail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
         android:text="New email"/>
 
     <Button
