--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -8,4 +8,25 @@
     tools:context=".DeleteAccountActivity"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:text="New email"/>
+
+    <EditText
+        android:id="@+id/old_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:text="Old password"/>
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Delete"/>
+
 </LinearLayout>
