Fix adding parkings, parkings info and remove unnecessary functions

--- a/app/src/main/res/layout/activity_edit_parking_info.xml
+++ b/app/src/main/res/layout/activity_edit_parking_info.xml
@@ -9,6 +9,13 @@
     android:orientation="vertical">
 
     <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Name"/>
+
+    <EditText
         android:id="@+id/et_parking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
