--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -9,6 +9,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="name"
+        android:textSize="28dp"/>
+
+    <TextView
         android:id="@+id/tv_parking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
