--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -41,4 +41,9 @@
         android:layout_width="500dp"
         android:layout_height="200dp"/>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment2"
+        android:layout_width="500dp"
+        android:layout_height="720dp"/>
+
 </RelativeLayout>
