--- a/app/src/main/res/layout/fragment_find_parks_options.xml
+++ b/app/src/main/res/layout/fragment_find_parks_options.xml
@@ -69,6 +69,13 @@
             android:hint="Max capacity"
             android:layout_marginTop="10dp"/>
 
+        <EditText
+            android:id="@+id/et_parking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Parking surface"
+            android:layout_marginTop="10dp"/>
+
         <Button
             android:id="@+id/btn_find"
             android:layout_width="match_parent"
