--- a/app/src/main/res/layout/fragment_find_parks_options.xml
+++ b/app/src/main/res/layout/fragment_find_parks_options.xml
@@ -26,11 +26,13 @@
             android:layout_height="wrap_content">
 
             <RadioButton
+                android:id="@+id/sup_yes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="yes"/>
 
             <RadioButton
+                android:id="@+id/sup_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="no"/>
