--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -36,6 +36,15 @@
         android:layout_alignParentTop="true"
         android:text="SET"/>
 
+    <Button
+        android:id="@+id/btn_clear"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="CLEAR"/>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
         android:layout_width="500dp"
