--- a/app/src/main/res/layout/fragment_find_parks_options.xml
+++ b/app/src/main/res/layout/fragment_find_parks_options.xml
@@ -29,13 +29,13 @@
                 android:id="@+id/sup_yes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="yes"/>
+                android:text="Tak"/>
 
             <RadioButton
                 android:id="@+id/sup_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="no"/>
+                android:text="Nie"/>
 
         </RadioGroup>
 
