Add multiple where queries to showing info from database functionality

--- a/app/src/main/res/layout/fragment_find_parks_options.xml
+++ b/app/src/main/res/layout/fragment_find_parks_options.xml
@@ -55,12 +55,12 @@
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="yes"/>
+                android:text="Tak"/>
 
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="no"/>
+                android:text="Nie"/>
 
         </RadioGroup>
 
