--- a/app/src/main/res/layout/activity_guy.xml
+++ b/app/src/main/res/layout/activity_guy.xml
@@ -5,8 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountActivity"
+    tools:context=".GuyActivity"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:text="Dane osobowe"
+        android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/et_name"
@@ -25,26 +32,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="confirm"/>
-
-    <Button
-        android:id="@+id/btn_mailchange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="change email"/>
-
-    <Button
-        android:id="@+id/btn_passchange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="change password"/>
-
-    <Button
-        android:id="@+id/btn_delete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="delete account"/>
 
 </LinearLayout>
