Add tickets and parkings layouts and update getting address from nominatim

--- a/app/src/main/res/layout/single_parking.xml
+++ b/app/src/main/res/layout/single_parking.xml
@@ -5,35 +5,28 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/marka"
+        android:id="@+id/nazwa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
         android:textAlignment="center"/>
 
     <TextView
-        android:id="@+id/model"
+        android:id="@+id/adres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
         android:textAlignment="center"/>
 
     <TextView
-        android:id="@+id/typ"
+        android:id="@+id/status_edyt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
         android:textAlignment="center"/>
 
     <TextView
-        android:id="@+id/rok"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:id="@+id/numer_rejestracyjny"
+        android:id="@+id/status_weryf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
