--- a/app/src/main/res/layout/activity_edit_car.xml
+++ b/app/src/main/res/layout/activity_edit_car.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddCarActivity">
+    tools:context=".EditCarActivity">
 
     <TextView
         android:id="@+id/tv_title"
@@ -50,7 +50,7 @@
 
     <Button
         android:id="@+id/btn_add"
-        android:text="Dodaj"
+        android:text="Edytuj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
