--- a/app/src/main/res/layout/single_parking.xml
+++ b/app/src/main/res/layout/single_parking.xml
@@ -32,4 +32,11 @@
         android:textSize="26dp"
         android:textAlignment="center"/>
 
+    <TextView
+        android:id="@+id/data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
+
 </LinearLayout>
