--- a/app/src/main/res/layout/activity_edit_parking_info.xml
+++ b/app/src/main/res/layout/activity_edit_parking_info.xml
@@ -12,43 +12,78 @@
         android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Name"/>
+        android:hint="Name"
+        android:layout_marginTop="10dp"/>
 
     <EditText
-        android:id="@+id/et_parking"
+        android:id="@+id/et_pking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Parking"/>
+        android:hint="Pking"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/et_access"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Access"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/et_capacity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Capacity"/>
+        android:hint="Capacity"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/et_capacitydis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CapacityDisabled"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/et_capacitytru"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CapacityTrucks"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/et_capacitybus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CapacityBus"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/et_capacitymoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CapacityMoto"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/et_fee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Fee"/>
+        android:hint="Fee"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/et_supervised"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Supervised"/>
+        android:hint="Supervised"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/et_operator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Operator"/>
+        android:hint="Operator"
+        android:layout_marginTop="10dp"/>
 
     <Button
         android:id="@+id/btn_edit"
