--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -23,10 +23,45 @@
         android:textSize="28dp"/>
 
     <TextView
+        android:id="@+id/tv_access"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="access"
+        android:textSize="28dp"/>
+
+    <TextView
         android:id="@+id/tv_capacity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="capacity"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_capacitydis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="capacityDisabled"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_capacitytrucks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="capacityTrucks"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_capacitybus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="capacityBus"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_capacitymoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="capacityMoto"
         android:textSize="28dp"/>
 
     <TextView
@@ -48,6 +83,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="operator"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_ulica"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ulica"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_kod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="kod"
+        android:textSize="28dp"/>
+
+    <TextView
+        android:id="@+id/tv_miasto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="miasto"
         android:textSize="28dp"/>
 
     <Button
