--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -11,8 +11,8 @@
         android:id="@+id/tv_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="lol"
-        android:textSize="28dp"
+        android:text="ulica abp. Jerzego Ablewicza, 33-100 Tarnów, Polska"
+        android:textSize="22dp"
         android:textAlignment="center"
         android:background="#FFF000"/>
 
@@ -20,21 +20,21 @@
         android:id="@+id/btn_route"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         android:text="route"/>
 
     <Button
         android:id="@+id/btn_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:text="info"/>
 
     <Button
         android:id="@+id/btn_reservation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="170dp"
         android:text="rezerwacja"/>
 
 </FrameLayout>
