--- a/app/src/main/res/layout/fragment_find_parks_options.xml
+++ b/app/src/main/res/layout/fragment_find_parks_options.xml
@@ -1,90 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindParksOptionsFragment"
-    android:background="#FFF000">
+    android:fillViewport="true">
 
-    <LinearLayout
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
+        tools:context=".FindParksOptionsFragment"
+        android:background="#FFF000">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="28dp"
-            android:textAlignment="center"
-            android:text="Supervised"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
 
-        <RadioGroup
-            android:id="@+id/rg_sup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/sup_yes"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tak"/>
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Filtrowanie"/>
 
-            <RadioButton
-                android:id="@+id/sup_no"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nie"/>
+                android:textSize="22dp"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center"
+                android:text="Typ parkingu"/>
 
-        </RadioGroup>
+            <Spinner
+                android:id="@+id/spinner_type"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="28dp"
-            android:textAlignment="center"
-            android:layout_marginTop="28dp"
-            android:text="Fee"/>
-
-        <RadioGroup
-            android:id="@+id/rg_fee"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RadioButton
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tak"/>
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Dostęp"/>
 
-            <RadioButton
+            <Spinner
+                android:id="@+id/spinner_access"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <EditText
+                android:id="@+id/et_capacity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nie"/>
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Wielkość parkingu (liczba miejsc)"
+                android:layout_marginTop="10dp"/>
 
-        </RadioGroup>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Parking płatny"/>
 
-        <EditText
-            android:id="@+id/et_capacity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Max capacity"
-            android:layout_marginTop="10dp"/>
+            <Spinner
+                android:id="@+id/spinner_fee"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
 
-        <EditText
-            android:id="@+id/et_parking"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Parking surface"
-            android:layout_marginTop="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Parking strzeżony"/>
 
-        <Button
-            android:id="@+id/btn_find"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SZUKAJ"
-            android:layout_marginTop="10dp"/>
+            <Spinner
+                android:id="@+id/spinner_supervised"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla niepełnosprawnych"/>
 
-</FrameLayout>
+            <Spinner
+                android:id="@+id/spinner_disabled"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla tirów"/>
+
+            <Spinner
+                android:id="@+id/spinner_truck"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla busów"/>
+
+            <Spinner
+                android:id="@+id/spinner_bus"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla motocykli"/>
+
+            <Spinner
+                android:id="@+id/spinner_moto"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/btn_find"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SZUKAJ"
+                android:layout_marginTop="10dp"/>
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+</ScrollView>
